# closely

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: CI.yml
src/: cli.rs  config.rs  helper.rs  hook.rs  lib.rs  main.rs  notify.rs  platform.rs  prop.rs  reporter.rs  task.rs  util.rs
src/config/: accounts.rs  mod.rs  overridable.rs  secret.rs  validator.rs
src/notify/: mod.rs  telegram.rs
src/notify/platform/: mod.rs
src/notify/platform/qq/: lagrange.rs  mod.rs
src/notify/platform/telegram/: mod.rs  request.rs
src/notify/qq/: lagrange.rs  mod.rs
src/notify/telegram/: mod.rs  request.rs
src/platform/: bilibili.rs  live_bilibili_com.rs  mod.rs  space_bilibili_com.rs  twitter_com.rs
src/platform/bilibili/: mod.rs
src/platform/bilibili/source/: live.rs  mod.rs  space.rs  video.rs
src/platform/bilibili/source/playback/: bililive_recorder.rs  mod.rs
src/platform/qq/: lagrange.rs  mod.rs
src/platform/qq/notify/: mod.rs
src/platform/telegram/: mod.rs
src/platform/telegram/notify/: mod.rs  request.rs
src/platform/twitter/: mod.rs  request.rs
src/platform/twitter/source/: mod.rs
src/reporter/: mod.rs  norec.rs
src/source/: bilibili_live.rs  bilibili_space.rs  content.rs  helper.rs  mod.rs
src/source/abstruct/: file.rs  live.rs  mod.rs  notification.rs  post.rs  status.rs  update.rs
src/source/bilibili/: live.rs  mod.rs  space.rs  video.rs
src/source/platform/: mod.rs
src/source/platform/bilibili/: live.rs  mod.rs  space.rs  video.rs
src/source/platform/bilibili/playback/: bililive_recorder.rs  mod.rs
src/source/platform/twitter/: mod.rs
src/source/twitter/: mod.rs  request.rs
src/task/: mod.rs  reporter.rs  subscription.rs
