[package]
name = "closely"
version = "0.1.17"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.89"
bytes = "1.7.2"
clap = { version = "4.5.19", features = ["derive"] }
futures = "0.3.31"
headless_chrome = "1.0.15"
humantime-serde = "1.1.1"
image = "0.25.2"
itertools = "0.13.0"
once_cell = "1.20.2"
paste = "1.0.15"
rand = "0.8.5"
reqwest = { version = "0.12.8", features = ["json", "gzip", "multipart"] }
serde = { version = "1.0.210", features = ["derive", "rc"] }
serde_json = "1.0.128"
spdlog-rs = { version = "0.4.0", features = ["source-location"] }
tokio = { version = "1.40.0", features = ["rt-multi-thread", "macros", "fs", "time", "sync"] }
toml = "0.8.19"

[features]
qq = []
