[package]
name = "closely"
version = "0.1.20"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.89"
bytes = "1.7.2"
chrono = "0.4.39"
clap = { version = "4.5.19", features = ["derive"] }
const_format = "0.2.34"
headless_chrome = "1.0.15"
http = "1.3.1"
http-serde = "2.1.1"
humansize = "2.1.3"
humantime-serde = "1.1.1"
image = "0.25.2"
itertools = "0.13.0"
once_cell = "1.20.2"
paste = "1.0.15"
rand = "0.8.5"
reqwest = { version = "0.12.8", features = ["json", "gzip", "multipart"] }
serde = { version = "1.0.210", features = ["derive", "rc"] }
serde_json = "1.0.128"
shadow-rs = "0.38.0"
spdlog-rs = { version = "0.4.0", features = ["source-location"] }
tempfile = "3.19.1"
tokio = { version = "1.40.0", features = ["rt-multi-thread", "macros", "fs", "time", "sync", "process"] }
toml = "0.8.19"
warp = "0.3.7"

[build-dependencies]
shadow-rs = "0.38.0"

[features]
qq = []
