[package]
name = "closely"
version = "0.1.21"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.98"
bytes = "1.10.1"
chrono = "0.4.41"
clap = { version = "4.5.43", features = ["derive"] }
const_format = "0.2.34"
headless_chrome = "1.0.17"
http = "1.3.1"
http-serde = "2.1.1"
humansize = "2.1.3"
humantime-serde = "1.1.1"
image = "0.25.6"
itertools = "0.14.0"
once_cell = "1.21.3"
paste = "1.0.15"
rand = "0.9.2"
reqwest = { version = "0.12.22", features = ["json", "gzip", "multipart"] }
serde = { version = "1.0.219", features = ["derive", "rc"] }
serde_json = "1.0.142"
shadow-rs = "1.2.1"
spdlog-rs = { version = "0.4.3", features = ["source-location"] }
tempfile = "3.20.0"
tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros", "fs", "time", "sync", "process"] }
toml = "0.9.5"
warp = { version = "0.4.1", features = ["server"] }

[build-dependencies]
shadow-rs = "1.2.1"
